# Robotica

SOLID/NuestroRobot/: CMakeLists.txt  package.xml
SOLID/NuestroRobot2/: CMakeLists.txt  package.xml
SOLID/NuestroRobot3/: CMakeLists.txt  package.xml
SOLID/NuestroRobot4/: package.xml
SOLID/Robot Kol Montaj/: CMakeLists.txt  package.xml
datos/tabla_DH/: NUESTROROBOT.csv  robot2.csv  robot4.csv  robot5.csv  robot6.csv  robot7.csv  robot8.csv  robot_EJEMPLO.csv
reportes/Cinematica Inversa/: reporte.tex
reportes/Ejercicios Denavit Hartenberg/: reporte.tex
reportes/Reporte Final/: Reporte.listing  Reporte.tex  bibliografia.bib
reportes/Tarea Sensores/: fuentes.bib  reporte.tex
resultados/animaciones/: Cinematica_NUESTROROBOT_2025-04-30_10-43-18.avi  Cinematica_NUESTROROBOT_2025-04-30_10-43-46.avi  Cinematica_NUESTROROBOT_2025-05-24_18-59-46.avi  Cinematica_NUESTROROBOT_2025-05-24_19-05-36.avi  cinematica_inversa_NuestroRobot_2025-05-24_20-43-58.avi  cinematica_inversa_NuestroRobot_2025-05-24_20-47-39.avi  cinematica_inversa_NuestroRobot_2025-05-24_22-37-09.avi  cinematica_inversa_NuestroRobot_2025-05-25_17-14-03.avi  cinematica_inversa_NuestroRobot_2025-05-25_17-15-10.avi  cinematica_inversa_NuestroRobot_2025-05-25_17-18-52.avi  (+3 more)
src/NuestroRobot4/: CMakeLists.txt  package.xml
src/NuestroRobot4/config/: joint_trajectory_controller.yaml
src/NuestroRobot4/launch/: arm_urdf.launch  display.launch  gazebo.launch
src/NuestroRobot4/meshes/: Link_3.STL  Link_4.STL  base_link.STL
src/NuestroRobot4/urdf/: NuestroRobot4.urdf
src/mi_robot/: package.xml
test/: NUESTROROBOT.mlx  ROBOT12.mlx  ROBOT2.mlx  ROBOT3.mlx  ROBOT4.mlx  ROBOT5.mlx  ROBOT6.mlx  ROBOT7.mlx  ROBOT8.mlx  ROBOTEJEMPLO.mlx  pruebaCinematicaDirecta.mlx  prueba_DH.mlx  prueba_cinematica_directa.mlx  prueba_cinematica_inversa.mlx  prueba_cinematica_inversa_BASE_1488.mlx  prueba_euler.mlx  transformacion_homogenea.mlx
(+137 files in other folders)
